# pachca-github-bot

./: AGENTS.md  CHANGELOG.md  Dockerfile  LICENSE  README.md  justfile  pyproject.toml  skills-lock.json
.github/workflows/: ci.yml  release.yml
actions/generic-alert/: action.yml
actions/generic-deployment/: action.yml
src/pachca_bot/: __main__.py  app.py  client.py  config.py  deploy_tracker.py  gh_deploy_tracker.py  pr_tracker.py  security.py
src/pachca_bot/core/: blocks.py  client.py  config.py
src/pachca_bot/handlers/: generic.py  github.py
src/pachca_bot/integrations/generic/: deploy_tracker.py
src/pachca_bot/integrations/github/: gh_deploy_tracker.py  handler.py  models.py  pr_tracker.py
src/pachca_bot/models/: __init__.py  messages.py  webhooks.py
tests/: test_app.py  test_deploy_tracker.py  test_gh_deploy_tracker.py  test_handlers.py  test_models.py  test_pr_tracker.py  test_security.py
